<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="note">Note</string>
    <string name="same_day_messenger_service">same day messenger service</string>
    <string name="next_day_ground_delivery">next day ground delivery</string>
    <string name="pick_up">pick up</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>